# getclass.py

./: README.md  setup.cfg  setup.py
tests/getclass/examples/getclass(object)/: getclass(CLS) # None  getclass(CLS.classmethod)  getclass(CLS.method)  getclass(CLS.property)  getclass(CLS.staticmethod)  getclass(None) # None  getclass(sys) # None
