[metadata]
name = getclass
version = 2018.12.11
url = https://github.com/looking-for-a-job/getclass.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = class object inspect

[options]
install_requires = 
	public
	setuptools
packages = 
	getclass
